# hello-world-mysql

./: .gitignore  README.md  pyproject.toml  setup.py
conf/db/: mysql.yaml
resources/test-data/: boosters.csv
src/mysql_hello_world/: __init__.py  data.py  version.py
tests/test_mysql/: test_mysql.py
