[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mysql-hello-world"
version = "1.0.0"
dependencies = []

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
namespaces = false  # true by default